# TM

./: .dockerignore  .gitignore  Build Notes.md  Database-Referential-Integrity-Analysis.md  Database-Security-Implementation-Summary.md  Dockerfile copy.apibuild  Dockerfile.apibuild  Dockerfile.webbuild  README.md  Security review.md  Security-Implementation-Complete.md  Security-Remediation-Plan.md  ToDo.md  certs.cmd  db-backup-before-migration-20260321-172559.sql  docker-compose.yml  go.mod  index.html  main.wasm  project_open.cmd
api-server/: .env  Build notes.md  Dockerfile  PASSWORD_LOGIN.md  Readme.md  debug-startup.sh  go.mod  go.sum  main.go  main.go_gin
api-server/app/: db.go  (+2 more)
client1/: Dockerfile  Dockerfile.client  Notes.md  go.mod  go.sum  main.go
client1_rust/: .gitignore  Cargo.toml
client1_rust/src/: lib.rs  utils.rs
client1_rust/src/app_core/: mod.rs
client1_rust/src/event_processor/: mod.rs
client1_rust/src/views/: mod.rs
client1_rust/src/views/access_level_view/: mod.rs
client1_rust/src/views/access_type_view/: mod.rs
client1_rust/src/views/booking_status_view/: mod.rs
client1_rust/src/views/main_view/: mod.rs
client1_rust/src/views/trip_type_view/: mod.rs
client1_rust/src/views/user_age_group_view/: mod.rs
client1_rust/src/views/user_member_status_view/: mod.rs
client2-NoSRP/: go.mod  go.sum  main.go
data/: readme.md
db-server/: Dockerfile-my-test  Dockerfile-offical  Readme.md  docker-compose-old.yml  docker-compose.yml
web-server/: Dockerfile  Dockerfile.webserver  Notes.md  go.mod  index.html  main.go  test.html
(+411 files in other folders)
