[package]
name = "client1_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "HtmlButtonElement",
    "HtmlParagraphElement",
    "HtmlSpanElement",
    "HtmlInputElement",
    "HtmlTextAreaElement", # Added for AccessLevelView
    "CssStyleDeclaration",
    "MouseEvent",
    "Node",
    "Headers",
    "Request",
    "Response",
    "Window",
    "console",
]}
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4" # Added
